fixed cursor on mobile nav toggle in firefox

--- a/scss/imports/_typewriter.scss
+++ b/scss/imports/_typewriter.scss
@@ -1,4 +1,4 @@
-span {
+.cursor {
     border-right: .05em solid;
     animation: caret 1s steps(1) infinite;
   }
